# portfolio-analyzer

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: RFC-redesign.md
notebooks/: portfolioOpt.ipynb  portfolio_analysis.ipynb
scripts/: test.py
src/finance_project/: black_litterman.py  data_fetcher.py  dcf_calculator.py  input_preparator.py  monte_carlo_simulator.py  plotting.py  portfolio_optimizer.py
src/portfolio_analyzer/: backtester.py  black_litterman.py  config.py  data_fetcher.py  dcf_calculator.py  input_preparator.py  logging_config.py  monte_carlo_simulator.py  plotting.py  portfolio_optimizer.py  reporting.py
src/portfolio_analyzer/analysis/: backtester.py  frontier.py  metrics.py  monte_carlo_simulator.py
src/portfolio_analyzer/config/: config.py
src/portfolio_analyzer/core/: black_litterman.py  interfaces.py  models.py  new_objectives.py  objectives.py  optimizer.py  portfolio_optimizer.py  types.py  utils.py
src/portfolio_analyzer/data/: cache.py  data_fetcher.py  dcf_calculator.py  input_preparator.py  models.py  new_input_preparator.py  new_models.py  repository.py  schema.py
src/portfolio_analyzer/estimators/: base.py  black_litterman.py  capm.py
src/portfolio_analyzer/interactive/: session.py
src/portfolio_analyzer/reporting/: display.py  plotting.py  reporting.py  summary_card.css
src/portfolio_analyzer/return_estimator/: __init__.py  base.py  black_litterman.py  black_litterman_return.py  blended.py  blended_return.py  capm.py  capm_return_estimator.py  constant_return.py  dcf.py  dcf_return_estimator.py  ewma.py  ewma_return.py  fill_nan_return.py  nan_filler.py  return_estimator.py
src/portfolio_analyzer/utils/: exceptions.py  html_helpers.py  util.py
tests/core/: test_objectives.py  test_optimizer.py  test_utils.py
tests/data/: test_schema.py
tests/estimators/: test_ewma_estimator.py
(+2 files in other folders)
