[tool.poetry]
name = "portfolio-analyzer"
version = "0.1.1"
description = ""
authors = ["Vorckea <akselschrader@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
yfinance = "^0.2.30"
scikit-learn = "^1.4.0"
scipy = "^1.13.0"
numpy = "^2.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
networkx = "^3.2"
python-dotenv = "^1.0.0"
ipython = "^8.20.0"
ipywidgets = "^8.1.0"
tqdm = "^4.67.1"
logger = "^1.4"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
jupyterlab = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, isort, flake8-docstrings, and more
select = ["E", "F", "W", "I", "N", "D"] 

[tool.ruff.format]
quote-style = "double"